--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^5.0.0
   shared_preferences: ^2.0.6
   video_player: ^2.1.14
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.1"
