--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^5.0.0
   shared_preferences: ^2.0.6
   video_player: ^2.1.14
+  toggle_switch: ^1.2.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.1"
