--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.6
   video_player: ^2.1.14
   toggle_switch: ^1.2.0
+  flutter_html: ^2.1.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.1"
