--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   floating_bottom_navigation_bar: ^1.5.2
   flutter:
     sdk: flutter
+  flutter_html: ^2.1.1
+  flutter_staggered_grid_view: ^0.4.0
   flutter_svg: ^0.22.0
   fluttertoast: ^8.0.7
   google_fonts: ^2.1.0
@@ -36,9 +38,8 @@ dependencies:
   pin_code_fields: ^7.3.0
   provider: ^5.0.0
   shared_preferences: ^2.0.6
-  video_player: ^2.1.14
   toggle_switch: ^1.2.0
-  flutter_html: ^2.1.1
+  video_player: ^2.1.14
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.1"
