--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   toggle_switch: ^1.2.0
   video_player: ^2.1.14
   awesome_dialog: ^2.1.1
+  font_awesome_flutter: ^9.1.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.1"
