--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,15 @@ dependencies:
   cached_network_image: ^3.1.0
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
+  dio: ^4.0.0
+  firebase_auth: ^3.1.0
+  firebase_auth_web: ^3.1.0
   firebase_core: ^1.6.0
   firebase_messaging: ^10.0.6
   floating_bottom_navigation_bar: ^1.5.2
   flutter:
     sdk: flutter
+  flutter_facebook_login: ^3.0.0
   flutter_html: ^2.1.1
   flutter_local_notifications: ^8.1.1+1
   flutter_staggered_grid_view: ^0.4.0
@@ -37,6 +41,7 @@ dependencies:
   fluttertoast: ^8.0.7
   font_awesome_flutter: ^9.1.0
   google_fonts: ^2.1.0
+  google_sign_in: ^5.0.7
   intl: ^0.17.0
   introduction_screen: ^2.1.0
   permission_handler: ^8.1.4+2
