--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   floating_bottom_navigation_bar: ^1.5.2
   flutter:
     sdk: flutter
-  flutter_facebook_login: ^3.0.0
+  # flutter_facebook_login: ^3.0.0
+  flutter_facebook_auth: ^3.0.0-nullsafety.1
   flutter_html: ^2.1.1
   flutter_local_notifications: ^8.1.1+1
   flutter_staggered_grid_view: ^0.4.0
