--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   pin_code_fields: ^7.3.0
   provider: ^5.0.0
   shared_preferences: ^2.0.6
+  top_snackbar_flutter: ^1.0.0
   toggle_switch: ^1.2.0
   video_player: ^2.1.14
 
