--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -100,5 +100,7 @@
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Need access to browser profile image</string>
 </dict>
 </plist>
