--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
   floating_bottom_navigation_bar: ^1.5.2
   flutter:
     sdk: flutter
-  # flutter_facebook_login: ^3.0.0
   flutter_facebook_auth: ^3.0.0-nullsafety.1
   flutter_html: ^2.1.1
   flutter_local_notifications: ^8.1.1+1
@@ -43,14 +42,15 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   google_fonts: ^2.1.0
   google_sign_in: ^5.0.7
+  image_picker: ^0.8.4
   intl: ^0.17.0
   introduction_screen: ^2.1.0
   permission_handler: ^8.1.4+2
   pin_code_fields: ^7.3.0
   provider: ^5.0.0
   shared_preferences: ^2.0.6
-  top_snackbar_flutter: ^1.0.0
   toggle_switch: ^1.2.0
+  top_snackbar_flutter: ^1.0.0
   video_player: ^2.1.14
 
 dev_dependencies:
