--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
+  dropdown_search: ^0.6.3
   firebase_auth: ^3.1.0
   firebase_auth_web: ^3.1.0
   firebase_core: ^1.6.0
