--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.combojumbo.cjspoton">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="cjspoton"
+        tools:replace="android:label"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
