--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,9 @@ dependencies:
   shared_preferences: ^2.0.6
   toggle_switch: ^1.2.0
   top_snackbar_flutter: ^1.0.0
+  url_launcher: ^6.0.10
   video_player: ^2.1.14
+  whatsapp_unilink: ^2.0.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.1"
