--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
     </queries>
    <application
         android:label="CJ SpotOn"
-        tools:replace="android:label"
+        tools:replace="android:label,android:usesCleartextTraffic"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
