--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,11 +52,13 @@ dependencies:
   permission_handler: ^8.1.4+2
   pin_code_fields: ^7.3.0
   provider: ^5.0.0
+  readmore: ^2.1.0
   shared_preferences: ^2.0.6
   toggle_switch: ^1.2.0
   top_snackbar_flutter: ^1.0.0
   url_launcher: ^6.0.0
   video_player: ^2.1.14
+  webview_flutter: ^2.0.13
   whatsapp_unilink: ^2.0.0
 
 dev_dependencies:
@@ -66,10 +68,11 @@ dev_dependencies:
     sdk: flutter
 
 flutter_native_splash:
-  image: assets/images/cjspoton.png
+  image: assets/images/spash_screen_3.png
   color: "#ffffff"
   web_image_mode: center
-
+  android_gravity: fill
+# flutter pub run flutter_native_splash:create
 flutter_icons:
   android: "launcher_icon"
   ios: true
