--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   floating_bottom_navigation_bar: ^1.5.2
   flutter:
     sdk: flutter
+  flutter_datetime_picker: ^1.5.1
   flutter_facebook_auth: ^3.0.0-nullsafety.1
   flutter_html: ^2.1.1
   flutter_local_notifications: ^8.1.1+1
