--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   intl: ^0.17.0
   introduction_screen: ^2.1.0
   path: ^1.8.0
-  permission_handler: ^8.1.4+2
+  permission_handler: ^8.1.6
   pin_code_fields: ^7.3.0
   provider: ^5.0.0
   readmore: ^2.1.0
