--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   google_fonts: ^2.1.0
   google_sign_in: ^5.0.7
   http: ^0.13.3
-  image_cropper: ^1.4.1
+  image_crop: ^0.4.0
   image_picker: ^0.8.4
   intl: ^0.17.0
   introduction_screen: ^2.1.0
@@ -60,6 +60,7 @@ dependencies:
   shared_preferences: ^2.0.6
   toggle_switch: ^1.2.0
   top_snackbar_flutter: ^1.0.0
+  universal_internet_checker: ^0.1.2
   url_launcher: ^6.0.0
   video_player: ^2.1.14
   webview_flutter: ^2.0.13
