--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   provider: ^5.0.0
   readmore: ^2.1.0
   shared_preferences: ^2.0.6
+  sign_in_with_apple: ^3.2.0
   toggle_switch: ^1.2.0
   top_snackbar_flutter: ^1.0.0
   universal_internet_checker: ^0.1.2
