--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
             
         </activity>
 
-        <!-- Don't delete the meta-data below.
+        <!-- Don't delete the meta-data below.f
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
