--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   flutter_facebook_auth: ^3.0.0-nullsafety.1
   flutter_html: ^2.1.1
   flutter_local_notifications: ^8.1.1+1
+  flutter_localizations:
+    sdk: flutter
   flutter_payu_unofficial: ^1.0.3
+  flutter_rounded_date_picker: ^2.0.2
   flutter_staggered_grid_view: ^0.4.0
   flutter_svg: ^0.22.0
   fluttertoast: ^8.0.7
