--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   pin_code_fields: ^7.3.0
   provider: ^5.0.0
   readmore: ^2.1.0
+  reviews_slider: ^2.0.0
   shared_preferences: ^2.0.6
   sign_in_with_apple: ^3.2.0
   toggle_switch: ^1.2.0
